--- a/pkg/function/merger/Dockerfile
+++ b/pkg/function/merger/Dockerfile
@@ -1,19 +1,18 @@
 FROM golang:latest
-
 WORKDIR /app
 
-COPY ../../go.mod ./
+COPY ../../../go.mod ./
 RUN go mod download
 
 COPY . .
 
 EXPOSE 8000
-EXPOSE 9002
+EXPOSE 9000
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends curl \
     && rm -rf /var/lib/apt/lists/*
 
-RUN go build -o ./splitter ./pkg/splitter
+RUN go build -o ./merger ./pkg/function/merger
 
-CMD ["./splitter"]
+CMD ["./merger"]
